--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/swagger": "^4.7.13",
     "bcrypt": "^5.0.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "csurf": "^1.11.0",
     "express-rate-limit": "^5.2.5",
     "helmet": "^4.4.1",
