--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/jest": "^26.0.15",
     "@types/joi": "^17.2.3",
     "@types/node": "^14.14.6",
+    "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
