--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.13",
     "@nestjs/swagger": "^4.7.15",
+    "aws-sdk": "^2.860.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
@@ -44,8 +45,10 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
+    "sharp": "^0.27.2",
     "swagger-ui-express": "^4.1.6",
-    "twilio": "^3.57.0"
+    "twilio": "^3.57.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.6",
@@ -55,6 +58,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/joi": "^17.2.3",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.31",
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
