--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
     "class-validator": "^0.13.1",
     "csurf": "^1.11.0",
     "express-rate-limit": "^5.2.6",
+    "google-auth-library": "^7.0.2",
     "helmet": "^4.4.1",
     "joi": "^17.4.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.18",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
@@ -60,6 +63,7 @@
     "@types/joi": "^17.2.3",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.31",
+    "@types/passport-facebook": "^2.1.10",
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
