--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.13",
-    "@nestjs/config": "^0.6.3",
-    "@nestjs/core": "^7.6.13",
-    "@nestjs/event-emitter": "^0.0.3",
-    "@nestjs/jwt": "^7.2.0",
-    "@nestjs/mongoose": "^7.2.4",
-    "@nestjs/passport": "^7.1.5",
-    "@nestjs/platform-express": "^7.6.13",
-    "@nestjs/swagger": "^4.7.15",
+    "@nestjs/axios": "^0.0.1",
+    "@nestjs/common": "^8.0.5",
+    "@nestjs/config": "^1.0.1",
+    "@nestjs/core": "^8.0.5",
+    "@nestjs/event-emitter": "^1.0.0",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/mongoose": "^8.0.0",
+    "@nestjs/passport": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.5",
+    "@nestjs/swagger": "^5.0.9",
     "aws-sdk": "^2.860.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
@@ -47,16 +48,15 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
     "sharp": "^0.27.2",
     "swagger-ui-express": "^4.1.6",
     "twilio": "^3.59.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.6",
-    "@nestjs/schematics": "^7.2.8",
-    "@nestjs/testing": "^7.6.13",
+    "@nestjs/cli": "^8.1.1",
+    "@nestjs/schematics": "^8.0.2",
+    "@nestjs/testing": "^8.0.5",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
