--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.4",
     "@nestjs/swagger": "^7.4.2",
+    "@nestjs/throttler": "^6.2.1",
     "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
